# 42_RAG_2.0

./: .gitignore  Makefile  README.md  answers.json  export.json  pyproject.toml
.github/workflows/: unit_test.yml
api/: api.py
data/datasets/AnsweredQuestions/: dataset_code_public.json
data/datasets/UnansweredQuestions/: dataset_code_public.json
data/output/search_results/UnansweredQuestions/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results_and_answer/AnsweredQuestions/: dataset_code_public.json  dataset_docs_public.json
data/processed/index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  data_models.py  evaluator.py  llm.py  rag_processor.py  retriever.py
