[project]
name = "42-rag-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.9",
    "colorama>=0.4.6",
    "fire>=0.7.1",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "pydantic>=2.13.4",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.2.0",
]
