[project]
name = "42-rag-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "bm25s>=0.3.9",
    "colorama>=0.4.6",
    "fire>=0.7.1",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "pydantic>=2.13.4",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.13.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.2.0",
    "types-colorama>=0.4.15.20260508",
    "types-tqdm>=4.68.0.20260608",
]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fire", "bm25s"]
ignore_missing_imports = true
